--- a/docs/basic/concurrent/关于线程池.md
+++ b/docs/basic/concurrent/关于线程池.md
@@ -36,7 +36,7 @@ ThreadPoolExecutor consumerExecutor = new ThreadPoolExecutor(10, 10, 60L, TimeUn
 ## 线程池的参数关系
 线程池的核心参数corePoolSize、maximumPoolSize、workQueue，以下以图形式表现：
 
-!线程池的参数关系[](../images/2019-02-26-16-54-22.png)
+!线程池的参数关系[](./images/2019-02-26-16-54-22.png)
 
 1. 当运行中的线程数量达到了corePoolSize个数，如果再加入新线程时，新线程就会在workQueue阻塞队列中等待，如果workQueue队列满了，后续新加入的线程将直接执行，直到maximumPoolSize个数，一旦达到maximumPoolSize最大数量，则执行RejectedExecutionHandler拒绝策略。
 2. Keep-Alive策略，默认是针对超出corePoolSize个数的空闲线程的最大存活时间，一旦达到存活时间，就回收空闲线程。
@@ -77,5 +77,36 @@ ThreadPoolExecutor consumerExecutor = new ThreadPoolExecutor(10, 10, 60L, TimeUn
     + 以上都是理想值，实际情况下要根据机器性能来决定。如果在未达到最大线程数的情况机器cpu load已经满了，则需要通过升级硬件（呵呵）和优化代码，降低taskcost来处理。
 
 支付场景，A接口需要调用微信支付接口完成支付任务，调用微信支付接口被放在一个线程池中执行，假如微信接口的超时时间为2s，A接口的QPS大概为100，如何设置线程池参数比较合理？
+
+
+
+#### 根据CPU核心数确定线程池并发线程数
+参考：https://blog.csdn.net/FAw67J7/article/details/79885842
+**2大派系**
+第一派系：《Java Concurrency in Practice》
+给出了估算线程池大小的公式：
+Nthreads=Ncpu*Ucpu*(1+w/c)，其中
+Ncpu=CPU核心数
+Ucpu=cpu使用率，0~1
+W/C=等待时间与计算时间的比率
+
+第二派系：《Java 虚拟机并发编程》
+线程数=Ncpu/（1-阻塞系数）
+
+**实际应用**
+那么实际使用中并发线程数如何设置呢？分析如下（我们以派系一公式为例）：
+
+Nthreads=Ncpu*(1+w/c)
+
+IO密集型：一般情况下，如果存在IO，那么肯定w/c>1（阻塞耗时一般都是计算耗时的很多倍）,但是需要考虑系统内存有限（每开启一个线程都需要内存空间），这里需要上服务器测试具体多少个线程数适合（CPU占比、线程数、总耗时、内存消耗）。如果不想去测试，保守点取1即，Nthreads=Ncpu*(1+1)=2Ncpu。这样设置一般都OK。
+
+计算密集型：假设没有等待w=0，则W/C=0. Nthreads=Ncpu。
+
+**结论：**
+IO密集型=2Ncpu（可以测试后自己控制大小，2Ncpu一般没问题）（常出现于线程中：数据库数据交互、文件上传下载、网络数据传输等等）
+
+计算密集型=Ncpu（常出现于线程中：复杂算法）
+
+java中：Ncpu=Runtime.getRuntime().availableProcessors()
 
 ## 
