--- a/docs/interview/面试题.md
+++ b/docs/interview/面试题.md
@@ -1,6 +1,28 @@
 1. jvm垃圾回收的时候如何确定垃圾？ 是否知道什么是GC Roots？
 2. 你说你做过jvm调试和参数配置，请问如何盘点查看jvm系统默认值？
 3. 你平时工作用过的jvm常用基本配置参数有哪些？
+4. 分布式锁解决缓存重建并发的问题
+5. 事务的隔离级别
+6. MySQL实现可重复读的原理、索引
+7. 数据库主从同步情况下，如果从库同步主库的数据延迟比计较高，怎么才能在写到主库后立刻能够读取到数据。
+    解决方案：使用缓存
+8. 加锁时候，用什么锁对象时内存占用最小？
+9. Collections.sort使用的排序算法
+10. AQS、线程池、ThreadLocal原理
+11. 分布式限流有哪些方案，以及用线程池进行限流的限流的缺陷是什么？
+12. JVM模型，JMM模型，垃圾回收机制、垃圾收集器
+13. 项目中使用了哪些设计模式？
+14. synchronized和reentrantlock的区别，偏向锁/轻量级锁/重量级锁的原理，能否从偏向锁直接升级到重量级锁？
+    > 偏向锁：锁只被一个线程持有
+    > 轻量级锁：不同线程交替持有锁
+    > 多线程竞争锁：重量级锁
+    > 
+15. 线程池原理和参数配置，jvm调优，堆大小的设计，多线程的线程数的设置，volatile原理
+16. redis的数据类型，比如要获取一个有序列表的前10个元素应该用什么命令？
+17. B+树的原理，Innodb引擎和MyIsam引擎的区别和使用场景，MySQL的分库分表？
+18. mq的可靠性和顺序性
+19. ES插入数据的原理、倒排索引
+20. redis的数据类型，每个数据类型的底层实现，跳表数据结构如何插入数据，如何扩容？
 
 
 
